# pydent

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CreatingDocs.md  DeveloperNotes.md  Examples.md  MANIFEST.in  Makefile  Pipfile  Planner.md  README  README.md  README.rst  Tests.md  Usage.md  change_log.md  change_log.txt  contributing.md  installation.md  license.md  planned_features.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  todo.md  tox.ini
.benchmarks/Darwin-CPython-3.6-64bit/: 0001_555c5e0d77b583d15b9a1e544f71f32b23bcfe55_20181109_065047_uncommited-changes.json  0002_555c5e0d77b583d15b9a1e544f71f32b23bcfe55_20181109_065250_uncommited-changes.json  0003_555c5e0d77b583d15b9a1e544f71f32b23bcfe55_20181109_065417_uncommited-changes.json  0004_555c5e0d77b583d15b9a1e544f71f32b23bcfe55_20181109_065731_uncommited-changes.json  0005_555c5e0d77b583d15b9a1e544f71f32b23bcfe55_20181109_070220_uncommited-changes.json  0006_555c5e0d77b583d15b9a1e544f71f32b23bcfe55_20181109_070339_uncommited-changes.json  0007_555c5e0d77b583d15b9a1e544f71f32b23bcfe55_20181109_070625_uncommited-changes.json
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: -bug---version-x-y-z-.md  -feature---version-x-y-z-.md  bug-report.md  feature-request.md
.keats/: changelog.json  changelog.md
algorithms/: __init__.py
config/: trident.js
core/: AQ.js  base.js  login.js  record.js
demo/: finding_samples.sh
demo/doitlive/: Untitled.ipynb  intro.sh
docs/: .buildinfo  CreatingDocs.rst  Examples.rst  Makefile  advanced.html  api_reference.html  aqsession.html  base.html  basic_usage.html  browser.html  browsing.html  build_docs.sh  conf.py  contributing.html  developer_notes.html  examples.rst  exceptions.html  extra.html  genindex.html  getting_started.html  index.html  index.rst  installation.html  intro.html  make.bat  marshaller.html  model_details.html  models.html  objects.inv  overview.html  planner.html  planning.html  py-modindex.html  querying.html  quickstart.html  search.html  searchindex.js  tests.html  versions.html
docs/.doctrees/: environment.pickle  index.doctree
docs/_autosummary/: pydent.aqhttp.rst  pydent.aqsession.rst  pydent.base.rst  pydent.exceptions.rst  pydent.interfaces.rst  pydent.marshaller.rst  pydent.models.rst  pydent.relationships.rst  pydent.session.rst  pydent.utils.rst
docs/_modules/: index.html  pydent.html
docs/_sources/: advanced.rst.txt  api_reference.rst  aqsession.rst  base.rst  browser.rst  browsing.rst.txt  developer_notes.rst.txt  exceptions.rst  getting_started.rst.txt  index.rst  index.rst.txt  intro.rst.txt  marshaller.rst  models.rst  overview.rst.txt  planner.rst  planning.rst.txt  quickstart.rst.txt  tests.rst.txt  versions.rst.txt
docs/_static/: ascii_trident.html  documentation_options.js
docs/advanced/: caching.html  planner_tutorial.html  planner_tutorial.ipynb  planning_tutorial.html  topics.html
docs/aql/: schemas.html
docs/basics/: getting_started.html  installation.html  inventory.html  planning.html  querying.html
docs/developer/: api_notes.html  api_reference.html  contributing.html  tests.html  versions.html
docs/doctest/: output.txt
docs/doctrees/: browsing.doctree  developer_notes.doctree  environment.pickle  index.doctree  intro.doctree  overview.doctree  planning.doctree  quickstart.doctree  tests.doctree
docs/other/: extra.html  intro.html  tests.html
docs/user/: browsing.html  examples.html  installation.html  planning.html
docsrc/: Makefile  README.rst  Tests.rst  advanced.rst  api_reference.rst  aqsession.rst  basic_usage.rst  conf.py  contributing.rst  getting_started.rst  index.rst  installation.rst  model_details.rst  models.rst  overview.rst  planning.rst  versions.rst
docsrc/_templates/: layout.html  sidebar.html
docsrc/advanced/: caching.rst  planning_tutorial.rst  topics.rst
docsrc/aql/: aql.schema.json  get_one_primer.json  get_primers_in_last_week.json  get_three_items.json  one_item.json  primer_aliquots.json  primer_aliquots_AS_JSON.json
docsrc/basics/: getting_started.rst  installation.rst  inventory.rst  planning.rst
docsrc/developer/: api_notes.rst  api_reference.rst  contributing.rst  tests.rst  versions.md  versions.rst
docsrc/user/: browsing.rst  examples.rst  installation.rst
examples/: __init__.py  find_primers.py  finding_models.py  instantiating_models.py  interactive_login.py  login.py  serializing_models.py  submit_a_plan.py
js/: trident.js
js/config/: trident.js
js/core/: AQ.js  base.js  login.js  record.js  utils.js
js/models/: item.js
js/test/: data_assocation.js  sample_types.js  user.js
pip-wheel-metadata/pydent-0.1.0a0.dist-info/: METADATA
py/: test.sh
py/aq/: __init__.py  aqhttp.py  base.py  http.py  item.py  record.py  sample.py  sample_type.py  session.py  user.py
py/cloning/: pcr.py
py/test/: basics.py  code.py  create_samples.py  current.py  encapsulate_plan.py  field_value.py  has_many.py  includes.py  item.py  operation_type.py  plan.py  s3.py  sample.py  sample_type.py  serialize.py  submit_pcr.py  submit_plan.py
pydent/: __init__.py  __version__.py  aqhttp.py  aqsession.py  base.py  browser.py  config_template.py  exceptions.py  interfaces.py  inventory_updater.py  mixins.py  modelbase.py  models.py  pylintrc  relationships.py  sessionabc.py  test.sh  utils.py
pydent/_version/: __init__.py  version.json
pydent/aq/: __init__.py  aqbase.py  aqhttp.py  aqsession.py  base.py  http.py  pillow_models.py  record.py  session.py  (+2 more)
pytests/: conftest.py  test_code_update.py
scripts/: README.md  convert_md_to_rst.sh  format.ini  publish.sh  pypi_config.sh  release.sh  tag.sh  test_pypi_config.sh  testpublish.sh
test/: basics.py  create_samples.py  data_assocation.js  get_sample_types.js  has_many.py  item.py  item_history.js  operation_type.py  plan.py  s3.py  sample_types.js  submit_plan.py  user.js
tests/: __init__.py  conftest.py  scratch.py  test_base.py  test_base_adv.py  test_experimental.py  test_interface.py  test_relationships.py
(+1061 files in other folders)
