[tool.poetry]
name = "pydent"
version = "0.1.5a8"
description = "Aquarium's Python API for planning, executing, and analyzing scientific experiments."
documentation = "https://www.klavinslab.org/trident"
repository = "https://www.github.com/klavinslab/trident"
homepage = "https://www.github.com/klavinslab/trident"
authors = ["jvrana <justin.vrana@gmail.com>", "Ben Keller <bjkeller@uw.edu>", "Eric Klavins <klavins@uw.edu>"]
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"
inflection = "^0.3.1"
tqdm = "^4.32"
networkx = "^2.3"
nest-asyncio = "^1.0"
pandas = "^0.24.2"
colorlog = "^4.0"
arrow = "^0.15.4"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-cov = "^2.7"
pylint = "^2.3"
udatetime = "^0.0.16"
marshmallow = "^2.19"
pytest-benchmark = "^3.2"
pygal = "^2.4"
pygaljs = "^1.0"
yapf = "^0.27.0"
dill = "^0.2.9"
black = "=19.3b0"
pytest-sugar = "^0.9.2"
vcrpy = "^2.0"
pre-commit = "^1.17"
sphinx = { version = "^2.1", optional = true }
sphinx-bootstrap-theme = { version = "^0.7.1", optional = true }
docformatter = { version = "^1.1", optional = true }
nbsphinx = { version = "^0.4.2", optional = true }
pandoc = { version = "^1.0", optional = true }
recommonmark = {version="^0.5.0", optional = true}
tox = "^3.12"
tox-conda = "^0.2.0"
sphinx_autodoc_typehints = "^1.8"
autodocsumm = "^0.1.11"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-bootstrap-theme", "docformatter", "nbsphinx", "pandoc", "recommonmark"]

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
