[tool.poetry]
name = "pydent"
version = "1.0.5"
description = "Aquarium's Python API for planning, executing, and analyzing scientific experiments."
documentation = "http://aquariumbio.github.io/trident"
repository = "https://www.github.com/aquariumbio/trident"
homepage = "https://www.github.com/aquariumbio/trident"
authors = ["jvrana <justin.vrana@gmail.com>", "Ben Keller <bjkeller@uw.edu>", "Eric Klavins <klavins@uw.edu>"]
readme = 'README.md'
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"
inflection = "^0.3.1"
tqdm = "^4.32"
networkx = "^2.3"
nest-asyncio = "^1.0"
colorlog = "^4.0"
retry = "^0.9.2"
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-cov = "^2.7"
pylint = "^2.3"
pytest-benchmark = "^3.2"
pygal = "^2.4"
pygaljs = "^1.0"
yapf = "^0.27.0"
dill = "^0.2.9"
black = "=19.3b0"
vcrpy = "^2.0"
pre-commit = "^1.17"
tox = "^3.12"
tox-conda = "^0.2.0"
liccheck = "^0.4.2"
sphinx_autodoc_typehints = "^1.8"
autodocsumm =  "^0.1.11"
sphinx-jsonschema = "^1.12"
sphinx =  "^2.1"
sphinx_bootstrap_theme =  "^0.7.1"
docformatter =  "^1.1"
nbsphinx =  "^0.4.2"
pandoc =  "^1.0"
recommonmark = "^0.5.0"
keats = "^0.2.28"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.liccheck]
authorized_licenses = [
        "bsd",
        "mpl-2.0",
        "new bsd",
        "bsd license",
        "new bsd license",
        "simplified bsd",
        "apache",
        "apache 2.0",
        "apache license 2.0",
        "apache softare",
        "apache software license",
        "gnu lgpl",
        "lgpl with exceptions or zpl",
        "LGPL",
        "isc license",
        "isc license (iscl)",
        "mit",
        "mit license",
        "python software foundation license",
        "zpl 2.1"
]
unauthorized_licenses = [
        "gpl",
        "gpl v2",
        "gpl v3",
        "gpl-2.0",
        "gpl-3.0",
]

[tool.liccheck.authorized_packages]
uuid = "1.30"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"
